[tool.poetry]
name = "cipher_jm5223"
version = "0.1.0"
description = ""
authors = ["JinghanMa98 <jm5223@columbia.edu>"]
documentation = 'https://cipher_jm5223.readthedocs.io'
homepage = "https://github.com/QMSS-G5072-2020/cipher_jm5223"
repository = "https://github.com/QMSS-G5072-2020/cipher_jm5223"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
